--- a/index.html
+++ b/index.html
@@ -3,21 +3,35 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Muslih Fvnky Shop</title>
+  
+  <!-- SEO Meta Tags -->
+  <title>Muslih Fvnky Shop - Jual FLM, Projek FL Studio Mobile, Jasa Musik Murah</title>
+  <meta name="description" content="Muslih Fvnky Shop menjual FLM dan projek FL Studio Mobile, menerima pesanan lagu, jasa mixing mastering, serta penyusunan chord & BPM. Harga murah, fast respon, dan original.">
+  <meta name="keywords" content="Muslih Fvnky Shop, Jual FLM, Projek FL Studio Mobile, Pemesanan Lagu, Jasa Mixing Mastering, Nyusun Chord, BPM, Musik Murah">
+  <meta name="author" content="Muslih Fvnky">
+  <link rel="canonical" href="https://namadomainkamu.com/">
+  
+  <!-- Open Graph / Social Media Preview -->
+  <meta property="og:title" content="Muslih Fvnky Shop - FLM & Jasa Musik Murah">
+  <meta property="og:description" content="Jual projek FL Studio Mobile (FLM), jasa mixing mastering, pemesanan lagu, dan nyusun chord & BPM. Harga terjangkau & fast respon.">
+  <meta property="og:image" content="https://i.imgur.com/4jIRft9.jpeg">
+  <meta property="og:url" content="https://namadomainkamu.com/">
+  <meta property="og:type" content="website">
+  
+  <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
+
   <style>
     body {
       background: url('https://i.imgur.com/p0K2KQs.png') no-repeat center center fixed;
       background-size: cover;
       font-family: sans-serif;
     }
-
     .overlay {
       background-color: rgba(0,0,0,0.7);
       min-height: 100vh;
       padding: 2rem 0;
     }
-
     .fade-slide {
       opacity: 0;
       transform: translateY(20px);
@@ -26,7 +40,6 @@
     @keyframes fadeSlide {
       to { opacity: 1; transform: translateY(0); }
     }
-
     .glow-btn {
       transition: all 0.3s ease-in-out;
       border: 2px solid #0FFCBE;
@@ -38,7 +51,6 @@
       box-shadow: 0 0 15px #0FFCBE, 0 0 25px #00f0ff;
       color: black;
     }
-
     .animated-gradient {
       background: linear-gradient(-45deg, #106EBE, #0FFCBE, #106EBE, #0FFCBE);
       background-size: 400% 400%;
@@ -57,7 +69,6 @@
       50% { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-
     .float-logo {
       width: 56px;
       height: 56px;
@@ -65,8 +76,8 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.5);
       animation: float 3s ease-in-out infinite;
       flex-shrink: 0;
-      opacity: 1; /* pastikan muncul */
-      transform: none; /* hilangkan transform awal */
+      opacity: 1;
+      transform: none;
     }
     @keyframes float {
       0%,100% { transform: translateY(0); }
@@ -76,7 +87,7 @@
 </head>
 <body class="text-white font-sans">
 
-  <!-- Header & Logo di luar overlay -->
+  <!-- Header & Logo -->
   <header class="animated-gradient" style="max-width: 2xl; margin: 1rem auto;">
     <img src="https://i.imgur.com/4jIRft9.jpeg" alt="Logo Muslih Fvnky" class="float-logo">
     <div>
@@ -90,9 +101,11 @@
 
       <!-- Welcome Section -->
       <section class="mb-8 fade-slide" style="animation-delay: 0.3s;">
-        <h2 class="text-xl font-bold mb-2">Selamat Datang Di Muslih Fvnky Shop</h2>
+        <h2 class="text-xl font-bold mb-2">Selamat Datang di Muslih Fvnky Shop</h2>
         <p class="text-gray-200 text-sm">
-          Saya Menjual FLM Atau Projek Fl Studio Mobile Dan Juga Menerima Pembelian Lagu Untuk Yang Berminat Bisa Langsung Cek Semua Produk Dibawah Ini!! WEBSITE BAKAL DI UPDATE SETIAP HARINYA JADI NANTIKAN FLM MENARIK LAINNYA!!!
+          Saya menjual FLM (Projek FL Studio Mobile) dan menerima pemesanan lagu. 
+          Anda juga bisa menggunakan jasa mixing mastering, serta penyusunan chord & BPM. 
+          Website ini akan diupdate setiap hari, jadi nantikan projek menarik lainnya!
         </p>
       </section>
 
@@ -122,8 +135,8 @@
       <section class="mb-8 text-sm text-gray-200 fade-slide" style="animation-delay: 0.9s;">
         <h3 class="text-lg font-semibold border-b-2 border-[#0FFCBE] inline-block mb-3">Hubungi Kami</h3>
         <p>WhatsApp: <a href="https://wa.me/6283821665970" class="underline hover:text-[#0FFCBE]">Wa Bang Muslih Ganteng</a></p>
-        <p>Instagram: <a href="https://www.instagram.com/mslihh.wav?igsh=MTBpdm9heTVuNjgyOA==" class="underline hover:text-[#0FFCBE]">@mslihh.wav</a></p>
-        <p>Youtube: <a href="https://youtube.com/@muslihfvnky?si=hfGYlsJh5RYih5D_==" class="underline hover:text-[#0FFCBE]">Muslih Fvnky</a></p>
+        <p>Instagram: <a href="https://www.instagram.com/mslihh.wav" class="underline hover:text-[#0FFCBE]">@mslihh.wav</a></p>
+        <p>Youtube: <a href="https://youtube.com/@muslihfvnky" class="underline hover:text-[#0FFCBE]">Muslih Fvnky</a></p>
       </section>
 
       <!-- Footer -->
