--- a/pembayaran.html
+++ b/pembayaran.html
@@ -69,7 +69,7 @@
     <h2>Pembayaran Muslih Fvnky</h2>
     <p><strong>Nomor DANA:</strong> 083821665970</p>
 
-    <img src="https://i.imgur.com/sd67NeU.jpeg" alt="QR DANA" class="qr-img" />
+    <img src="https://i.imgur.com/vxI5p9w.png" alt="Qris" class="qr-img" />
 
     <label for="produk">Jenis Produk:</label>
     <input type="text" id="produk" placeholder="Contoh: FLM Trabas" required />
