--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="https://i.imgur.com/t2N9CCK.png" sizes="512x512">
+  <link rel="apple-touch-icon" href="https://i.imgur.com/t2N9CCK.png">
+
   <!-- SEO Meta Tags -->
   <title>Muslih Fvnky Shop - Jual FLM, Projek FL Studio Mobile, Jasa Musik Murah</title>
   <meta name="description" content="Muslih Fvnky Shop menjual FLM dan projek FL Studio Mobile, menerima pesanan lagu, jasa mixing mastering, serta penyusunan chord & BPM. Harga murah, fast respon, dan original.">
