--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="https://i.imgur.com/t2N9CCK.png" sizes="512x512">
-  <link rel="apple-touch-icon" href="https://i.imgur.com/t2N9CCK.png">
+  <link rel="icon" type="image/png" href="https://i.imgur.com/aRy9T88.png" sizes="512x512">
+  <link rel="apple-touch-icon" href="https://i.imgur.com/aRy9T88.png">
 
   <!-- SEO Meta Tags -->
   <title>Muslih Fvnky Shop - Jual FLM, Projek FL Studio Mobile, Jasa Musik Murah</title>
